tests/baselines/reference/declFileExportAssignmentImportInternalModule.errors.txt
declFileExportAssignmentImportInternalModule.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
declFileExportAssignmentImportInternalModule.ts(2,19): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== declFileExportAssignmentImportInternalModule.ts (2 errors) ====
    module m3 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export module m2 {
                      ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
            export interface connectModule {
                (res, req, next): void;
            }
            export interface connectExport {
                use: (mod: connectModule) => connectExport;
                listen: (port: number) => void;
            }
    
        }
    
        export var server: {
            (): m2.connectExport;
            test1: m2.connectModule;
            test2(): m2.connectModule;
        };
    }
    
    import m = m3
    export = m;